# Geist

./: .gitignore  CMakeLists.txt  README.md  old_makefile
examples/minimal/: engine.cfg  main.cpp
include/geist/: Config.h  GhostSerializer.h  GhostWindow.h  IO.h
src/: BaseUnits.cpp  Config.cpp  Engine.cpp  Globals.cpp  Gui.cpp  GuiElements.cpp  GuiManager.cpp  IO.cpp  Logging.cpp  ParticleSystem.cpp  Primitives.cpp  RNG.cpp  RaylibModel.cpp  ResourceManager.cpp  ScriptingSystem.cpp  StateMachine.cpp  TooltipSystem.cpp
tools/ghost/: embed_resources.cmake
tools/ghost/data/Ghost/: ghost_components.ghost  ghost_prop_include.ghost
tools/ghost/src/: ColorPickerState.cpp  ColorPickerState.h  FileChooserState.cpp  FileChooserState.h  GhostResourceLoader.cpp  GhostResourceLoader.h  GhostSerializer.cpp  GhostSerializer.h  GhostState.cpp  GhostState.h  GhostWindow.cpp  GhostWindow.h  Main.cpp  SpritePickerState.cpp  SpritePickerState.h  SpriteUtils.h
